--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ justify-content: space-between;
 }
 
 .header-info{
-border-bottom: 1px solid #e7e9fc
+border-bottom: 1px solid #e7e9fc;
 }
   
 .main-navigation{
@@ -84,11 +84,6 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.54px;
 text-transform: uppercase;
-
-display: block;
-padding-top: 25.5px;
-padding-bottom: 25.5px;
-margin-right: 76px
 }
 
 .logo-part{
@@ -99,12 +94,25 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.54px;
 text-transform: uppercase;
-
+margin-right: 76px;
 }
 
 .main-navigation-items{
 display: flex;
 gap: 40px;
+}
+
+
+.navigation-link.active::after{
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--OCEAN, #404BBF);
+    position: absolute;
+    display: block;
+    margin-top: 20px;
+    bottom: -1px; 
 }
 
 .navigation-link{
@@ -113,16 +121,17 @@ font-size: 16px;
 font-weight: 500;
 letter-spacing: 0.32px; 
 
+position: relative;
 display: block;
 padding-top: 24px;
 padding-bottom: 24px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .contact-info{
 display: flex;
 gap: 40px;
-}
+} 
 
 .contact-link{
 font-size: 16px;
@@ -142,6 +151,7 @@ font-style: normal;
     color: var(--OCEAN, #404BBF);
 }
 
+
 /* ================== Main ==================== */
 
 /* Section with main button */
@@ -149,6 +159,9 @@ font-style: normal;
     background-color: var(--NAVY-BLUE, #2E2F42); 
     padding-top: 188px;
     padding-bottom: 188px;
+
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(0, 0, 0, 0.25)) ,url(../images/people-office.jpg);
+    background-size: cover;
 }
 
 .hero-container{
@@ -165,7 +178,7 @@ font-weight: 700;
 line-height: 1.07;
 letter-spacing: 1.12px;
 
-padding-bottom: 48px;
+margin-bottom: 48px;
 max-width: 496px;
 }
 
@@ -183,6 +196,7 @@ padding: 16px 32px;
 border-radius: 4px;
 border: none;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover,
@@ -194,8 +208,8 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 
 /* ============== Section about us ================ */
 .second-section{
-    padding-top: 120px;
-    padding-bottom:120px;
+padding-top: 120px;
+padding-bottom:120px;
 }
 
 .about-us{
@@ -204,7 +218,7 @@ gap: 24px;
 }
 
 .about-us-item{
-    width: calc((100% - 72px) / 4);
+width: calc((100% - 72px) / 4);
 }
 
 .about-us-title{
@@ -220,6 +234,21 @@ margin-bottom: 8px
 font-size: 16px;
 letter-spacing: 0.32px;  
 }
+
+.about-icons{
+width: 264px;
+height: 112px;
+border-radius: 4px;
+border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+background: var(--CLOUD, #F4F4FD);
+margin-bottom: 8px;
+
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+
 
 /* =============  Section our team ==============  */
 
@@ -276,6 +305,37 @@ text-align: center
  padding: 32px 0 
 }
 
+.social-items{
+display: flex;
+gap: 24px;
+margin-top: 8px;
+}
+
+.social-link{
+background-color: var(--IRIS, #4D5AE5);
+height: 40px;
+width: 40px;
+border-radius: 50%;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.member-social{
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 12px;
+}
+
+.social-link:hover,
+.social-link:focus{
+background-color: var(--GREEN, #31D0AA); 
+}
+
+.member-icon-link{
+width: 16px;
+height: 16px;
+fill: var(--CLOUD, #F4F4FD);
+}
 
 /* ==============   Section our portfolio ==============  */
 .fourth-section{
@@ -328,6 +388,35 @@ font-size: 16px;
 letter-spacing: 0.32px;
 }
 
+.image-container{
+position: relative;
+overflow: hidden;
+}
+
+.portfolio-overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: var(--IRIS, #4D5AE5);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.image-container:hover .portfolio-overlay{
+    transform: translateY(0%);
+}
+
+.overlay-text{
+color: var(--CLOUD, #F4F4FD);
+font-style: normal;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.32px;
+padding: 40px 32px;
+}
+
 /* ============ Footer ================ */
 .site-bottom{
 background-color: var(--NAVY-BLUE, #2E2F42);
@@ -351,8 +440,62 @@ text-transform: uppercase;
 
 .bottom-paragraph{
 color: var(--CLOUD, #F4F4FD);
-font-size: 16px;
 font-weight: 400;
 letter-spacing: 0.32px;
 width: 264px;
+}
+
+.footer-container{
+display: flex;
+align-items: baseline;
+}
+
+.footer-box{
+margin-right: 120px;
+}
+
+.footer-socials{
+width: 208px;
+height: 80px;
+}
+
+.footer-header{
+color: var(--WHITE, #FFF);
+font-style: normal;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.32px;
+
+margin-bottom: 16px;
+}
+
+.footer-links{
+display: flex;
+gap: 16px;
+}
+
+.items-footer{
+display: flex;
+}
+
+.icon-link{
+background-color: var(--IRIS, #4D5AE5);
+width: 40px;
+height: 40px;
+border-radius: 50%;
+display: flex;
+align-items: center;
+padding: 8px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link:hover,
+.icon-link:focus{
+background-color: var(--GREEN, #31D0AA);
+}
+
+.footer-icon{
+width: 24px;
+height: 24px;
+fill: var(--CLOUD, #F4F4FD);
 }
