--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ justify-content: space-between;
 
 .header-info{
 border-bottom: 1px solid #e7e9fc;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
   
 .main-navigation{
@@ -136,10 +137,10 @@ gap: 40px;
 .contact-link{
 font-size: 16px;
 letter-spacing: 0.32px;
-
 display: block;
 padding-top: 24px;
 padding-bottom: 24px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 address{
@@ -159,9 +160,13 @@ font-style: normal;
     background-color: var(--NAVY-BLUE, #2E2F42); 
     padding-top: 188px;
     padding-bottom: 188px;
-
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(0, 0, 0, 0.25)) ,url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-size: cover;
+    max-width: 1440px;
+    background-repeat: no-repeat; 
+    background-position: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero-container{
@@ -280,6 +285,7 @@ margin-bottom: 72px;
 background-color: var(--WHITE, #FFF);
 width: calc((100% - 72px) / 4); 
 border-radius: 0px 0px 4px 4px; 
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .our-team-title{
@@ -309,26 +315,27 @@ text-align: center
 display: flex;
 gap: 24px;
 margin-top: 8px;
+justify-content: center; 
 }
 
 .social-link{
 background-color: var(--IRIS, #4D5AE5);
 height: 40px;
 width: 40px;
-border-radius: 50%;
+border-radius: 50%; 
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .member-social{
 display: flex;
-justify-content: center;
 align-items: center;
+justify-content: center;
 padding: 12px;
 }
 
 .social-link:hover,
-.social-link:focus{
-background-color: var(--GREEN, #31D0AA); 
+.social-link:focus{ 
+background-color: var(--OCEAN, #404BBF); 
 }
 
 .member-icon-link{
@@ -353,7 +360,12 @@ row-gap: 48px;
 
 .our-portfolio-item{
  width: calc((100% - 48px) / 3);
+ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.our-portfolio-item:hover {
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 
 .portfolio-section{
 padding: 32px 16px;
@@ -393,6 +405,11 @@ position: relative;
 overflow: hidden;
 }
 
+.image-container:hover .portfolio-overlay {
+    transform: translateY(0%);
+}
+
+
 .portfolio-overlay{
     position: absolute;
     width: 100%;
@@ -415,6 +432,7 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.32px;
 padding: 40px 32px;
+
 }
 
 /* ============ Footer ================ */
@@ -459,13 +477,12 @@ width: 208px;
 height: 80px;
 }
 
-.footer-header{
+.footer-paragraph{
 color: var(--WHITE, #FFF);
 font-style: normal;
 font-weight: 500;
 line-height: 1.5; 
 letter-spacing: 0.32px;
-
 margin-bottom: 16px;
 }
 
@@ -485,6 +502,7 @@ height: 40px;
 border-radius: 50%;
 display: flex;
 align-items: center;
+justify-content: center; 
 padding: 8px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
